# acre-docker

./: .gitignore  Makefile  README.md  setup.cfg
.github/workflows/: makefile.yml
acre/docker/: path.py
acre/docker/base/: Dockerfile  Dockerfile1  Dockerfile2
acre/docker/base/etc/: requirements.txt
acre/docker/base/etc/init.d/: xvfb
docker/: Dockerfile
docker/etc/init.d/: xvfb
docker/pantest/: Dockerfile
etc/docker/Pleiades/: Dockerfile
features/selenium/: navigation.feature  tid9002-navigation.feature
lib/: controls.py
steps/: asserts.py  basic.py  selenium.py  settings.py  videorecorder.py
steps/selenium/: browser.py
tests/basic/: helloworld.feature
tests/selenium/: navigation.feature
