[metadata]
name = acre-docker
version = 0.0.1a1
description='the acre basic docker container'

[options]
packages = find_namespace:
include_package_data = True
install_requires =
package_dir =
    =.

[options.packages.find]
where = .

[options.package_data]
acre = 
    **/*
    **/.*


[bdist_wheel]
universal=1
